[package]
name = "err_prop"
version = "0.0.1"
authors = ["fulara <ntszar@gmail.com>"]
repository = "https://github.com/fulara/err_prop_rust"
keywords = ["error", "propagation" , "analysis", "floating", "point"]
readme = "README.md"
license = "Unlicense"
description = """Super simple ( and stupid ) floating point error propagation calculating type."""

[dependencies]
cgmath = "0.12"
